<!--
  ~ Copyright (c) 2018-2019 Qualcomm Technologies, Inc.
  ~ All rights reserved.
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted (subject to the limitations in the disclaimer below) provided that the following conditions are met:
  ~ * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~ * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
  ~ * Neither the name of Qualcomm Technologies, Inc. nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
  ~ * The origin of this software must not be misrepresented; you must not claim that you wrote the original software. If you use this software in a product, an acknowledgment is required by displaying the trademark/log as per the details provided here: [https://www.qualcomm.com/documents/dirbs-logo-and-brand-guidelines]
  ~ * Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.
  ~ * This notice may not be removed or altered from any source distribution.
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<resources>
    <string name="app_name">DVS</string>
    <string name="enter_imei">Enter IMEI</string>
    <string name="check_imei_status">Check IMEI Status</string>
    <string name="device_status">Device Status</string>
    <string name="imei">IMEI</string>
    <string name="block_as_of_date">Block as of Date</string>
    <string name="link_to_help">Link to Mitigation Help Content</string>
    <string name="reason_noncompliance">Reason for Non-Compliance</string>
    <string name="imei_compliance_status">IMEI Compliance Status</string>
    <string name="model_name">Model Name</string>
    <string name="brand">Brand</string>
    <string name="length_error">IMEI must be 14 to 16 characters long</string>
    <string name="hexa_error">IMEI must contain A&#8211;F, a&#8211;f and 0&#8211;9 only</string>

    <string name="recaptcha_key">ENTER RECAPTCHA KEY HERE</string>

    <string name="submit">Submit</string>
    <string name="iconAfterTitle">Icon after title</string>
    <string name="logoDes">Company logo goes here</string>
    <string name="insText">Dial *#06# to check the IMEI of device</string>
    <string name="invalidUrl">Link is invalid!</string>
    <string name="problemConnectingToServer">Problem connecting to server. Please try again later.</string>
    <string name="recaptcha_request_failed">Recaptcha request failed. Please try again later.</string>
    <string name="open_scanner">Open Scanner</string>
    <string name="close">Close</string>
    <string name="scanner_icon">Scanner icon</string>
    <string name="scanner_help_text">Place the barcode within the window to scan the barcode of IMEI.</string>
    <string name="not_available">N/A</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="yes_enable">Yes, enable it!</string>
    <string name="no">No</string>
    <string name="no_internet">No Internet!</string>
    <string name="error_network_error">No Internet Connection! Please enable wifi or mobile data and try again.</string>
    <string name="permission_access">Permission Access</string>
    <string name="camera_permission_needed">Camera permission needed for scanner.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied">Permission denied for camera.</string>

</resources>
